--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -344,7 +344,7 @@
                     android:background="@color/white"
                     android:layout_marginHorizontal="@dimen/_10sdp"/>
                 <LinearLayout
-                    android:id="@+id/security"
+                    android:id="@+id/security1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
