--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -9,10 +9,11 @@
 
     <ImageView
         android:id="@+id/ivBack"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
         android:src="@drawable/ic_back"
         app:layout_constraintTop_toTopOf="parent"
+        android:paddingStart="@dimen/_5sdp"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_margin="@dimen/_15sdp"/>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -21,24 +22,7 @@
         app:layout_constraintTop_toBottomOf="@+id/ivBack"
         android:layout_marginTop="@dimen/_30sdp"
         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Account Status"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="@dimen/_15sdp"
-            android:layout_marginVertical="@dimen/_20sdp"
-            android:layout_marginStart="@dimen/_18sdp"/>
-        <ImageView
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/img_right_arrow"
-            android:layout_marginEnd="@dimen/_10sdp"/>
+
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
@@ -48,7 +32,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:id="@+id/mobileLock"
         app:layout_constraintTop_toBottomOf="@+id/accountStatus"
         android:layout_height="wrap_content">
         <TextView
@@ -70,7 +53,6 @@
             android:layout_marginEnd="@dimen/_20sdp"
             app:layout_constraintTop_toTopOf="parent"/>
 
-
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
@@ -80,69 +62,6 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:id="@+id/notifyUpdate"
-        app:layout_constraintTop_toBottomOf="@+id/mobileLock"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Notify Update"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="@dimen/_15sdp"
-            android:layout_marginStart="@dimen/_20sdp"/>
-        <androidx.appcompat.widget.SwitchCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:layout_marginVertical="@dimen/_10sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:background="@color/gray"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginHorizontal="@dimen/_10sdp"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@+id/notifyUpdate"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Notify Update"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textSize="@dimen/_15sdp"
-            android:layout_marginStart="@dimen/_20sdp"/>
-        <androidx.appcompat.widget.SwitchCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginVertical="@dimen/_10sdp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="@dimen/_20sdp"
-            app:layout_constraintTop_toTopOf="parent"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_1sdp"
-            android:background="@color/gray"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginHorizontal="@dimen/_10sdp"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
