--- a/app/src/main/res/layout/previous_meeting_item.xml
+++ b/app/src/main/res/layout/previous_meeting_item.xml
@@ -2,9 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/_5sdp">
+    android:layout_height="match_parent"
+    android:padding="@dimen/_5sdp"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -55,6 +55,7 @@
                         android:layout_height="0dp"
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
+                        android:gravity=""
                         android:text="Taj Hotel"
                         android:textSize="@dimen/_20sdp"
                         android:textStyle="bold" />
@@ -66,51 +67,78 @@
                         android:layout_marginHorizontal="@dimen/_10sdp"
                         android:layout_weight="1"
                         android:text="Ahmedabad"
+                        android:gravity=""
                         android:textColor="@color/black"
                         android:textSize="@dimen/_18sdp" />
-
-                    <TextView
-                        android:id="@+id/txtPrice"
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_marginHorizontal="@dimen/_10sdp"
-                        android:layout_weight="1"
-                        android:text="200 $"
-                        android:textColor="@color/black"
-                        android:textSize="@dimen/_18sdp" />
-
                 </LinearLayout>
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/_10sdp">
 
-                    <RatingBar
-                        android:id="@+id/ratingBar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        style="?android:attr/ratingBarStyleIndicator"
-                        android:rating="4"
-                        android:numStars="5"
-                        android:stepSize="1" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Booking Info :"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_15sdp" />
 
-                    <Button
-                        android:id="@+id/btnBookNow"
-                        style="@style/button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginBottom="@dimen/_10sdp"
-                        android:text="BOOK NOW"
-                        android:textSize="@dimen/_10sdp" />
+                <TextView
+                    android:id="@+id/txtDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="12/12/23"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_15sdp" />
+
+                <TextView
+                    android:id="@+id/txtTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="14:00"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_15sdp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp">
+
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    style="?android:attr/ratingBarStyleIndicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:numStars="5"
+                    android:rating="4"
+                    android:stepSize="1" />
+
+                <Button
+                    android:id="@+id/btnBookAgain"
+                    style="@style/button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    android:layout_weight="1"
+                    android:text="Book Again"
+                    android:textSize="@dimen/_10sdp" />
 
             </LinearLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
 
 </LinearLayout>
