--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D1B289"
+    android:background="@color/lightLeafBrown"
     android:orientation="vertical"
     tools:context=".homeScreen.HomeScreenActivity">
 
@@ -291,7 +291,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#BC9C74"
+                android:background="@color/lightLeafBrown"
                 android:orientation="vertical">
 
                 <de.hdodenhof.circleimageview.CircleImageView
