--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D1B289"
+    android:background="@color/lightLeafBrown"
     tools:context=".homeScreen.ProfileActivity">
 
     <ImageView
