--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="orange">#FF5722</color>
     <color name="darkLeafBrown">#916630</color>
     <color name="leafBrown">#C99145</color>
+    <color name="lightLeafBrown">#D1B289</color>
 </resources>
