--- a/app/src/main/res/layout/activity_book_meeting.xml
+++ b/app/src/main/res/layout/activity_book_meeting.xml
@@ -11,11 +11,12 @@
         android:id="@+id/ivBack"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
-        android:src="@drawable/ic_back"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_margin="@dimen/_15sdp"
         android:paddingStart="@dimen/_5sdp"
+        android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_margin="@dimen/_15sdp"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
