--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -69,18 +69,30 @@
                 android:textStyle="bold"
                 app:backgroundTint="#5EF1EEEE" />
 
-            <TextView
-                android:id="@+id/txtSignup"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:layout_below="@id/btnLogin"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:gravity="center"
                 android:paddingHorizontal="@dimen/_10sdp"
-                android:paddingVertical="@dimen/_10sdp"
-                android:text="@string/don_t_have_an_account_signup"
-                android:textColor="@color/white"
-                android:textStyle="normal" />
+                android:paddingVertical="@dimen/_10sdp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Don't Have an Account? "
+                    android:textColor="@color/white"/>
+
+                <TextView
+                    android:id="@+id/txtSignup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/don_t_have_an_account_signup"
+                    android:textColor="@color/white"/>
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
