--- a/app/src/main/res/layout/meeting_rooms_item.xml
+++ b/app/src/main/res/layout/meeting_rooms_item.xml
@@ -40,6 +40,13 @@
                         android:scaleType="fitXY"
                         android:src="@drawable/back_ground_image" />
 
+                    <ImageView
+                        android:id="@+id/imgFavourite"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="@dimen/_30sdp"
+                        android:layout_margin="@dimen/_5sdp"
+                        android:src="@drawable/baseline_favorite_border_24"/>
+
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
