--- a/app/src/main/res/layout/activity_book_meeting.xml
+++ b/app/src/main/res/layout/activity_book_meeting.xml
@@ -138,234 +138,24 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
+
+            <Button
+                android:id="@+id/btnBookNow"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_40sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
-                android:backgroundTint="@color/darkLeafBrown"
-                app:cardCornerRadius="@dimen/_10sdp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_20sdp"
-                        android:gravity="center"
-                        android:weightSum="2">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
-                            android:text="Name"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.1"
-                            android:text=":"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tvRoomName"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
-                            android:text="my meeting"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:gravity="center"
-                        android:weightSum="2">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
-                            android:text="Location"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.1"
-                            android:text=":"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tvRoomNumber"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
-                            android:text="102"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:gravity="center"
-                        android:weightSum="2">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
-                            android:text="Date"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.1"
-                            android:text=":"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tvBookingDate"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
-                            android:text="12:03:2022"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_16sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:gravity="center"
-                        android:weightSum="2">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
-                            android:text="Time"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.1"
-                            android:text=":"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tvBookingTime"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
-                            android:text="3 Hour"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_16sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:gravity="center"
-                        android:weightSum="2">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.7"
-                            android:text="Price"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="0.1"
-                            android:text=":"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tvPrice"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.2"
-                            android:text="400 $"
-                            android:textColor="@color/white"
-                            android:textSize="@dimen/_18sdp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_10sdp"
-                        android:gravity="end">
-
-                        <Button
-                            android:id="@+id/btnBookNow"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginVertical="@dimen/_10sdp"
-                            android:layout_marginEnd="@dimen/_20sdp"
-                            android:background="@drawable/button_shape"
-                            android:text="Book Now"
-                            android:textColor="@color/black"
-                            android:textSize="@dimen/_15sdp"
-                            app:backgroundTint="@color/gray" />
-                    </LinearLayout>
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
+                android:background="@drawable/button_shape"
+                android:text="Search Rooms"
+                android:layout_marginTop="@dimen/_30sdp"
+                android:layout_gravity="center"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_15sdp"
+                app:backgroundTint="@color/gray" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_1sdp"
                 android:layout_marginHorizontal="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_50sdp"
                 android:background="@color/white" />
 
             <View
