--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
             android:layout_height="@dimen/_40sdp"
             android:layout_alignParentEnd="true"
             android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_40sdp"
             android:src="@drawable/baseline_eye_24" />
 
     </RelativeLayout>
@@ -72,9 +72,9 @@
         android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginEnd="@dimen/_20sdp"
         android:gravity="center"
-        android:text="Reset My Password"
+        android:text="Reset My Password?"
         android:textColor="@color/black"
-        android:textSize="@dimen/_15sdp" />
+        android:textSize="@dimen/_12sdp" />
 
     <Button
         android:id="@+id/btnLogin"
