--- a/app/src/main/res/layout/activity_create_reservation.xml
+++ b/app/src/main/res/layout/activity_create_reservation.xml
@@ -17,6 +17,7 @@
         android:layout_marginHorizontal="@dimen/_10sdp"
         android:hint="search"
         android:paddingStart="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_50sdp"
         android:paddingEnd="@dimen/_30sdp"
         android:singleLine="true"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,10 +27,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginEnd="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_60sdp"
         android:src="@drawable/ic_close"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+        android:id="@+id/img_filter"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/img_filter_room"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_10sdp"/>
 
     <TextView
         android:id="@+id/tvNoData"
